--- a/.vscode-extensions-source/inline-completion-provider/package.json
+++ b/.vscode-extensions-source/inline-completion-provider/package.json
@@ -2,11 +2,7 @@
   "name": "inline-completion-provider",
   "version": "0.0.1",
   "description": "Inline completion provider extension for e2e testing",
-  "main": "dist/extension.js",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w"
-  },
+  "main": "extension.js",
   "keywords": [
     "vscode",
     "extension",
@@ -14,9 +10,5 @@
     "mock",
     "test"
   ],
-  "license": "MIT",
-  "devDependencies": {
-    "@types/vscode": "^1.105.0"
-  },
-  "dependencies": {}
+  "license": "MIT"
 }
