--- a/.vscode-extensions-source/inline-completion-provider/package.json
+++ b/.vscode-extensions-source/inline-completion-provider/package.json
@@ -4,6 +4,7 @@
   "description": "Inline completion provider extension for e2e testing",
   "type": "module",
   "main": "extension.js",
+  "publisher": "e2e-tests",
   "keywords": [
     "vscode",
     "extension",
