feature: measure node in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,8 @@ jobs:
             args: --measure named-function-count3 --runs 37 --restart-between --run-skipped-tests-anyway --inspect-shared-process
           - name: named-function-count3-extensions
             args: --measure named-function-count3 --runs 37 --restart-between --run-skipped-tests-anyway --inspect-extensions
+          - name: named-function-count3-node
+            args: --measure named-function-count3 --runs 37 --restart-between --run-skipped-tests-anyway --measure-node
           - name: mutation-observer-count
             args: --measure mutation-observer-count
           - name: resize-observer-count
@@ -326,6 +328,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-named-function-count3-extensions
           path: ./vscode-memory-leak-finder-results-linux-named-function-count3-extensions
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-named-function-count3-node
+          path: ./vscode-memory-leak-finder-results-linux-named-function-count3-node
       - uses: actions/download-artifact@v6
         continue-on-error: true
         with:
@@ -555,6 +562,11 @@ jobs:
         continue-on-error: true
         with:
           name: vscode-memory-leak-finder-results-linux-named-function-count3-extensions
+      - name: Delete individual artifacts
+        uses: geekyeggo/delete-artifact@v5
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-named-function-count3-node
       - name: Delete individual artifacts
         uses: geekyeggo/delete-artifact@v5
         continue-on-error: true
