--- a/packages/load-source-map-worker/package.json
+++ b/packages/load-source-map-worker/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@lvce-editor/rpc": "^4.20.0",
-    "@lvce-editor/verror": "^1.7.0",
-    "got": "^14.6.6"
+    "@lvce-editor/verror": "^1.7.0"
   }
 }
