feature: sort imports

--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -31,7 +31,7 @@
     "escape-html": "^1.0.3"
   },
   "devDependencies": {
-    "@types/escape-html": "^1.0.4",
-    "@types/babel__code-frame": "^7.0.6"
+    "@types/babel__code-frame": "^7.0.6",
+    "@types/escape-html": "^1.0.4"
   }
 }
