--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,8 @@ jobs:
             args: --measure disposable-count
           - name: worker-count
             args: --measure worker-count
+          - name: detached-dom-nodes-with-stack-traces
+            args: --measure detached-dom-nodes-with-stack-traces --runs 37 --restart-between --run-skipped-tests-anyway
     timeout-minutes: 360
     steps:
       - uses: actions/checkout@v6
@@ -446,6 +448,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-worker-count
           path: ./vscode-memory-leak-finder-results-linux-worker-count
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
+          path: ./vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
       - name: Merge all measure results
         run: node packages/build/src/mergeArtifacts.ts
       - name: Upload merged artifact
@@ -490,6 +497,11 @@ jobs:
         continue-on-error: true
         with:
           name: vscode-memory-leak-finder-results-linux-worker-count
+      - name: Delete individual artifacts
+        uses: geekyeggo/delete-artifact@v5
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
       - name: Delete individual artifacts
         uses: geekyeggo/delete-artifact@v5
         continue-on-error: true
