--- a/packages/function-tracker/tsconfig.json
+++ b/packages/function-tracker/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "checkJs": false,
     "module": "NodeNext",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "moduleResolution": "NodeNext",
     "isolatedModules": true,
     "strict": false,
