--- a/packages/function-tracker/package.json
+++ b/packages/function-tracker/package.json
@@ -16,7 +16,7 @@
     "@babel/generator": "^7.28.6",
     "@babel/parser": "^7.28.6",
     "@babel/traverse": "^7.28.6",
-    "@babel/types": "^7.28.6"
-  },
-  "devDependencies": {}
+    "@babel/types": "^7.28.6",
+    "@lvce-editor/verror": "^1.7.0"
+  }
 }
