--- a/packages/exec-worker/tsconfig.json
+++ b/packages/exec-worker/tsconfig.json
@@ -1,25 +1,27 @@
 {
   "compilerOptions": {
     "lib": ["esnext"],
-    "target": "esnext",
     "checkJs": true,
-    "module": "NodeNext",
+    "target": "esnext",
     "types": ["node"],
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "isolatedModules": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "noImplicitAny": false,
     "skipLibCheck": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
     "assumeChangesOnlyAffectDirectDependencies": true,
-    "resolveJsonModule": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
+    "composite": true,
+    "allowImportingTsExtensions": true,
     "rootDir": ".",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "allowImportingTsExtensions": true
+    "strictNullChecks": true
   },
-  "include": ["src", "test"]
+  "include": ["src", "test", "rollup.config.js"]
 }
