--- a/packages/video-recording-worker/tsconfig.json
+++ b/packages/video-recording-worker/tsconfig.json
@@ -1,28 +1,27 @@
 {
   "compilerOptions": {
     "lib": ["esnext"],
-    "target": "esnext",
     "checkJs": true,
-    "module": "NodeNext",
+    "target": "esnext",
     "types": ["node"],
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "skipLibCheck": true,
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
+    "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
     "noImplicitAny": true,
     "noUncheckedSideEffectImports": true,
     "exactOptionalPropertyTypes": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "allowSyntheticDefaultImports": true,
-    "assumeChangesOnlyAffectDirectDependencies": true,
-    "resolveJsonModule": true,
+    "composite": true,
+    "allowImportingTsExtensions": true,
     "rootDir": ".",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "composite": true,
-    "allowImportingTsExtensions": true,
     "strictNullChecks": true
   },
-  "include": ["src", "test"]
+  "include": ["src", "test", "rollup.config.js"]
 }
