--- a/packages/cryptography-worker/package.json
+++ b/packages/cryptography-worker/package.json
@@ -17,5 +17,9 @@
     "@lvce-editor/verror": "^1.7.0",
     "jsonwebtoken": "^9.0.3",
     "node-forge": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-forge": "^1.3.14"
   }
 }
