--- a/packages/devtools-protocol/tsconfig.json
+++ b/packages/devtools-protocol/tsconfig.json
@@ -1,28 +1,1 @@
-{
-  "compilerOptions": {
-    "lib": ["esnext"],
-    "target": "esnext",
-    "checkJs": true,
-    "module": "NodeNext",
-    "types": [],
-    "moduleResolution": "NodeNext",
-    "isolatedModules": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noUncheckedSideEffectImports": true,
-    "exactOptionalPropertyTypes": true,
-    "allowImportingTsExtensions": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "allowSyntheticDefaultImports": true,
-    "assumeChangesOnlyAffectDirectDependencies": true,
-    "resolveJsonModule": true,
-    "rootDir": ".",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "composite": true
-  },
-  "include": ["src", "test"]
-}
+{"compilerOptions": {"composite": true}, "include": []}
