--- a/packages/devtools-protocol/tsconfig.json
+++ b/packages/devtools-protocol/tsconfig.json
@@ -1,1 +1,1 @@
-{"compilerOptions": {"composite": true}, "include": ["src/**/*"]}
+{"compilerOptions": {"composite": true, "allowJs": true}, "include": ["src/**/*.js"]}
