--- a/packages/page-object/tsconfig.json
+++ b/packages/page-object/tsconfig.json
@@ -22,6 +22,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "composite": true,
+    "noUnusedParameters": true,
     "allowImportingTsExtensions": true
   },
   "include": ["src", "test"]
