Discard changes to packages/injected-code/tsconfig.json

--- a/packages/injected-code/tsconfig.json
+++ b/packages/injected-code/tsconfig.json
@@ -13,9 +13,7 @@
     "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noUncheckedSideEffectImports": true,
-    "exactOptionalPropertyTypes": true,
+    "noImplicitAny": false,
     "composite": true,
     "allowImportingTsExtensions": true,
     "rootDir": ".",
