--- a/packages/page-object/tsconfig.json
+++ b/packages/page-object/tsconfig.json
@@ -9,7 +9,9 @@
     "isolatedModules": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
@@ -20,6 +22,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "composite": true,
+    "noUnusedParameters": true,
     "allowImportingTsExtensions": true
   },
   "include": ["src", "test"]
