--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -81,6 +81,11 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           run: node packages/cli/bin/test.js --cwd packages/e2e --check-leaks --measure event-listeners
+      - name: Run headless test (check leaks, file descriptor count)
+        if: matrix.os == 'ubuntu-24.04'
+        uses: coactions/setup-xvfb@v1
+        with:
+          run: node packages/cli/bin/test.js --cwd packages/e2e --check-leaks --measure-after --measure file-descriptor-count --runs 37 --restart-between --run-skipped-tests-anyway
       - name: Generate charts
         run: node packages/charts/src/main.ts
       - uses: actions/upload-artifact@v6
