--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -455,6 +455,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
           path: ./vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-file-descriptor-count
+          path: ./vscode-memory-leak-finder-results-linux-file-descriptor-count
       - name: Merge all measure results
         run: node packages/build/src/mergeArtifacts.ts
       - name: Upload merged artifact
@@ -504,6 +509,11 @@ jobs:
         continue-on-error: true
         with:
           name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
+      - name: Delete individual artifacts
+        uses: geekyeggo/delete-artifact@v5
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-file-descriptor-count
       - name: Delete individual artifacts
         uses: geekyeggo/delete-artifact@v5
         continue-on-error: true
