feature: add file descriptor count measure (#2654)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,8 @@ jobs:
             args: --measure worker-count
           - name: detached-dom-nodes-with-stack-traces
             args: --measure detached-dom-nodes-with-stack-traces --runs 37 --restart-between --run-skipped-tests-anyway
+          - name: file-descriptor-count
+            args: --measure file-descriptor-count --runs 37 --restart-between --run-skipped-tests-anyway
     timeout-minutes: 360
     steps:
       - uses: actions/checkout@v6
@@ -453,6 +455,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
           path: ./vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-file-descriptor-count
+          path: ./vscode-memory-leak-finder-results-linux-file-descriptor-count
       - name: Merge all measure results
         run: node packages/build/src/mergeArtifacts.ts
       - name: Upload merged artifact
@@ -502,6 +509,11 @@ jobs:
         continue-on-error: true
         with:
           name: vscode-memory-leak-finder-results-linux-detached-dom-nodes-with-stack-traces
+      - name: Delete individual artifacts
+        uses: geekyeggo/delete-artifact@v5
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-file-descriptor-count
       - name: Delete individual artifacts
         uses: geekyeggo/delete-artifact@v5
         continue-on-error: true
