--- a/packages/extension-source-maps/tsconfig.json
+++ b/packages/extension-source-maps/tsconfig.json
@@ -21,5 +21,5 @@
     "noUnusedLocals": true,
     "strictNullChecks": true
   },
-  "include": ["src", "test"]
+  "include": ["src", "test", "playground"]
 }
