--- a/packages/source-map-coordinator/package.json
+++ b/packages/source-map-coordinator/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-dev",
   "license": "MIT",
   "type": "module",
-  "main": "src/main.ts",
+  "main": "src/sourceMapCoordinator.ts",
   "scripts": {
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
