--- a/packages/source-map-coordinator/package.json
+++ b/packages/source-map-coordinator/package.json
@@ -3,14 +3,23 @@
   "version": "0.0.0-dev",
   "license": "MIT",
   "type": "module",
-  "main": "src/sourceMapCoordinator.ts",
+  "main": "./src/sourceMapCoordinator.ts",
+  "bin": {
+    "test-worker": "bin/source-map-coordinator.js"
+  },
   "scripts": {
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
-    "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
+    "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch",
+    "knip": "knip"
   },
   "dependencies": {
     "@lvce-editor/assert": "^1.5.1",
     "@lvce-editor/rpc": "^5.4.0",
     "@lvce-editor/verror": "^1.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.10",
+    "knip": "^5.82.1",
+    "typescript": "^5.9.3"
   }
 }
