--- a/packages/source-map-worker/package.json
+++ b/packages/source-map-worker/package.json
@@ -8,5 +8,10 @@
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@lvce-editor/assert": "^1.5.1",
+    "@lvce-editor/rpc": "^5.4.0",
+    "@lvce-editor/verror": "^1.7.0",
+    "source-map": "^0.7.6"
+  }
 }
