--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,6 +179,8 @@ jobs:
             args: --measure file-descriptor-count --runs 37 --restart-between --run-skipped-tests-anyway
           - name: file-descriptors
             args: --measure file-descriptors --runs 37 --restart-between --run-skipped-tests-anyway
+          - name: file-watcher-count
+            args: --measure file-watcher-count --runs 37 --restart-between --run-skipped-tests-anyway
     timeout-minutes: 360
     steps:
       - uses: actions/checkout@v6
@@ -467,6 +469,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-file-descriptors
           path: ./vscode-memory-leak-finder-results-linux-file-descriptors
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-file-watcher-count
+          path: ./vscode-memory-leak-finder-results-linux-file-watcher-count
       - name: Merge all measure results
         run: node packages/build/src/mergeArtifacts.ts
       - name: Upload merged artifact
